--- a/src/main/resources/templates/registerStudent.html
+++ b/src/main/resources/templates/registerStudent.html
@@ -40,9 +40,9 @@
       <label for="remark">備考:</label>
       <input type="text" id="remark" th:field="*{student.remark}" />
     </div>
-    <div th:each="course, stat : *{studentsCourses}">
+    <div th:each="course, stat : *{studentCours}">
       <label for="courseName" th:for="studentCourse.__${stat.index}__.courseName" >受講コース名: </label>
-      <input type="text" id="courseName" th:id="studentCourse.__${stat.index}__.courseName" th:field="*{studentsCourses[__${stat.index}__].courseName}" />
+      <input type="text" id="courseName" th:id="studentCourse.__${stat.index}__.courseName" th:field="*{studentCours[__${stat.index}__].courseName}" />
     </div>
 
     <div>
