--- a/src/main/resources/templates/updateStudent.html
+++ b/src/main/resources/templates/updateStudent.html
@@ -48,12 +48,12 @@
       <label for="isDeleted">キャンセル:</label>
       <input type="checkbox" id="isDeleted" th:field="*{student.deleted}" />
     </div>
-    <div th:each="course, stat : *{studentsCourses}">
+    <div th:each="course, stat : *{studentCours}">
       <label for="studentCourseId" th:for="studentCourse.__${stat.index}__.id" >受講コースID: </label>
-      <input type="text" id="studentCourseId" th:id="studentCourse.__${stat.index}__.id" th:field="*{studentsCourses[__${stat.index}__].id}" />
+      <input type="text" id="studentCourseId" th:id="studentCourse.__${stat.index}__.id" th:field="*{studentCours[__${stat.index}__].id}" />
 
       <label for="courseName" th:for="studentCourse.__${stat.index}__.courseName" >受講コース名: </label>
-      <input type="text" id="courseName" th:id="studentCourse.__${stat.index}__.courseName" th:field="*{studentsCourses[__${stat.index}__].courseName}" />
+      <input type="text" id="courseName" th:id="studentCourse.__${stat.index}__.courseName" th:field="*{studentCours[__${stat.index}__].courseName}" />
     </div>
 
     <div>
